# life-tui

./: .gitignore  CHANGELOG.md  e-gol.cabal  flake.nix  life-tui.cabal
app/: Bench.hs  Cli.hs  Game.hs  Main.hs
bench/: Bench.hs
compile/: Const.hs  ConstQ.hs
lib/: Game.hs  Path.hs  TH.hs
templates/: acorn.gol  beacon.gol  david-hilbert.gol  glider.gol  gun.gol  infinite.gol  pentadecathlon.gol  r-pentomino.gol  spacefiller.gol
