cabal-version:   3.0
name:            life-tui
version:         0.1.0.0
synopsis:        Run Game of Life in the terminal
license:         MPL-2.0
license-file:    LICENSE
author:          Elizabeth Paź
maintainer:      me@ehllie.xyz
category:        Game
build-type:      Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options:        -Wall -Wno-type-defaults
  default-language:   Haskell2010
  build-depends:      base ^>=4.15.1.0
  default-extensions:
    ApplicativeDo
    LambdaCase
    NamedFieldPuns
    QuasiQuotes
    TupleSections

library
  import:          common
  hs-source-dirs:  lib
  exposed-modules:
    Game
    Path

  other-modules:   TH
  build-depends:
    , containers
    , directory
    , filepath
    , template-haskell

benchmark life-bench
  import:         common
  hs-source-dirs: bench
  main-is:        Bench.hs
  type:           exitcode-stdio-1.0
  build-depends:
    , criterion
    , life-tui

executable life-tui
  import:         common
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Cli
  build-depends:
    , ansi-terminal
    , life-tui
    , optparse-applicative
    , string-interpolate
